<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".OlderUser">

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/activity1"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:hint="@string/OlderActivity"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/descriptionActivityOlder"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24sp"
        android:hint="@string/descriptionOlderActivity"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity1" />

    <EditText
        android:id="@+id/deadline"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24sp"
        android:hint="@string/select_deadline"
        android:minHeight="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionActivityOlder" />

    <Button
        android:id="@+id/locationButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="#00FFFFFF"
        android:drawableBottom="@drawable/ic_action_name"
        app:layout_constraintTop_toBottomOf="@+id/deadline"
        tools:layout_editor_absoluteX="16dp"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@id/locationButton" />

    <Spinner
        android:id="@+id/frequencyOfActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:entries="@array/activityFrequency"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deadline" />
    <TextView
        android:id="@+id/descriptionSpinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descriptionOfSpinner1"
        android:textSize="16sp"
        android:layout_margin="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location"/>

    <Spinner
        android:id="@+id/urgencyOfActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:entries="@array/urgencyOfTheActivity"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location" />

    <Button
        android:id="@+id/addActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/send"
        android:backgroundTint="#4FC978"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/urgencyOfActivity" />

    <Button
        android:id="@+id/activitiesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="olderUserTasks"
        android:text="@string/aktivniBaranja"
        android:backgroundTint="#1de"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="114dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@+id/activity1"/>
</androidx.constraintlayout.widget.ConstraintLayout>